style: fixing styles on mobile

--- a/src/editor.css
+++ b/src/editor.css
@@ -9,7 +9,7 @@
   position:relative;
   overflow: hidden;
   z-index: 1;
-  touch-action: none;
+  /* touch-action: none; */
   /* border: 1px solid rgb(134, 134, 134); */
 }
 
