--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body{
     padding: 0;
     background-color: rgb(54, 53, 53);
     /* background-color: rgb(233, 233, 233); */
-    overflow: hidden;
+    /* overflow: hidden; */
     font-family: 'Roboto', sans-serif;
 }
 
@@ -46,12 +46,15 @@ body{
 }
 
 .mobileOptions{
-    width: 350px;
+    width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    margin-top: 50px;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 @media screen and (max-width:768px) {
